--- a/MyPage.xaml
+++ b/MyPage.xaml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Window
-    x:Class="QWinUI.MainWindow"
+    x:Class="QWinUI.MyPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:QWinUI"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="QWinUI">
+    Title="MyPage">
 
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
     <Grid>
-        <Button x:Name="MyButton" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="15" Click="MyButton_Click">Click me!</Button>
-        <Button x:Name="PageBtn" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15,60,15,0" Click="PageBtn_Click">Go to Next Page</Button>
+        <CalendarView Margin="20" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Button x:Name="ExitBtn" Background="LightBlue" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20" Click="ExitBtn_Click">Exit</Button>
+        <Button x:Name="NextPage" Background="LightBlue" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="20" Click="NextPage_Click">Next Page</Button>
     </Grid>
 </Window>
-
