--- a/AnimationWindow.xaml
+++ b/AnimationWindow.xaml
@@ -14,10 +14,14 @@
     </Window.SystemBackdrop>
 
     <Grid Margin="10">
-        <Image x:Name="MyImage" />
+        <Image Source="/Assets/Images/Mogpie.jpg" Height="200">
+            <!--<Image.Clip>
+                <RectangleGeometry Rect="25,25,100,150" />
+            </Image.Clip>-->
+        </Image>
         <Button x:Name="ExitBtn" Background="LightBlue" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20" Click="ExitBtn_Click">Exit</Button>
         <!--<Canvas Background="Blue" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0" Width="400" Height="200">
-        </Canvas>-->
-        
+</Canvas>-->
+
     </Grid>
 </Window>
